--- a/requirements.txt
+++ b/requirements.txt
@@ -1,105 +1,17 @@
-a2wsgi==1.10.2
-annotated-types==0.6.0
-anyio==4.3.0
-APScheduler==3.10.4
 asgiref==3.8.1
-asttokens==2.4.1
-backcall==0.2.0
-bandit==1.7.5
-black==22.1.0
-blue==0.9.1
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-coverage==7.4.4
-coverage-badge==1.1.0
-decorator==5.1.1
-Deprecated==1.2.14
-distlib==0.3.8
-dj-database-url==2.1.0
-Django==4.2.11
-django-extensions==3.2.3
-django-redis==5.4.0
-djangorestframework==3.15.1
-dparse==0.6.3
-executing==2.0.1
-fastapi==0.110.0
-filelock==3.14.0
-flake8==4.0.1
-gitdb==4.0.11
-GitPython==3.1.43
-gunicorn==21.2.0
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-idna==3.6
-importlib_resources==6.4.0
-iniconfig==2.0.0
-ipython==8.16.1
-isort==5.12.0
-jedi==0.19.1
-limits==3.10.1
-markdown-it-py==3.0.0
-matplotlib-inline==0.1.6
+astroid==2.4.2
+Django==5.0.6
+django-filter==24.2
+djangorestframework==3.15.0
+Faker==25.2.0
+isort==4.3.21
+lazy-object-proxy==1.4.3
 mccabe==0.6.1
-mdurl==0.1.2
-mypy-extensions==1.0.0
-mysqlclient==2.2.4
-newrelic==9.6.0
-orjson==3.9.15
-packaging==21.3
-parso==0.8.3
-pathspec==0.12.1
-pbr==6.0.0
-pexpect==4.9.0
-pickleshare==0.7.5
-pipenv==2023.12.1
-platformdirs==4.2.0
-pluggy==1.4.0
-prompt-toolkit==3.0.43
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycodestyle==2.8.0
-pydantic==2.6.1
-pydantic_core==2.16.2
-pyflakes==2.4.0
-Pygments==2.17.2
-PyJWT==2.8.0
-pyparsing==3.1.2
-pytest==8.0.2
-pytest-cov==4.1.0
-pytest-django==4.8.0
-pytest-env==1.1.3
-pytest-mock==3.12.0
-python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.1
-redis==5.0.3
-requests==2.31.0
-rich==13.7.1
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
-safety==2.3.5
-sentry-sdk==1.40.3
-six==1.16.0
-slowapi==0.1.9
-smmap==5.0.1
-sniffio==1.3.1
-sqlparse==0.4.4
-stack-data==0.6.3
-starlette==0.36.3
-stevedore==5.2.0
-tomli==2.0.1
-traitlets==5.14.2
-typing_extensions==4.10.0
-tzlocal==5.2
-urllib3==2.2.1
-uvicorn==0.27.1
-uvloop==0.19.0
-virtualenv==20.26.1
-watchfiles==0.21.0
-wcwidth==0.2.13
-websockets==12.0
-whitenoise==6.6.0
-wrapt==1.16.0
+pylint==2.5.3
+python-dateutil==2.9.0.post0
+pytz==2020.1
+six==1.15.0
+sqlparse==0.3.1
+toml==0.10.1
+validate-docbr==1.10.0
+wrapt==1.12.1
